# StudySync

./: .gitattributes  CMakeLists.txt  README.md
.github/workflows/: build.yml  release  release.yml
client/: resources.qrc
client/include/: ClientNetworkManager.h  ServerAPI.h  TcpClient.h
client/include/ui/: ClientState.h  MainWindow.h
client/include/ui/page/: FocusPage.h
client/include/ui/widget/: GroupCard.h  LoginWindow.h  ManageMembersDialog.h  NotificationsDialog.h  TaskCard.h
client/resources/lang/: en_us.json
client/src/: ClientNetworkManager.cpp  ServerAPI.cpp  TcpClient.cpp  main.cpp
client/src/ui/: ClientState.cpp  MainWindow.cpp
client/src/ui/page/: AbstractChatPage.cpp  AiTutorPage.cpp  DashboardPage.cpp  FocusPage.cpp  GroupChatPage.cpp  GroupsPage.cpp  TasksPage.cpp
client/src/ui/widget/: CreateGroupDialog.cpp  CreateTaskDialog.cpp  EditTaskDialog.cpp  GroupCard.cpp  LoginWindow.cpp  NotificationsDialog.cpp  TaskCard.cpp
include/: DataStructures.h
server/: CMakeLists.txt
server/include/: Database.h  MessageRouter.h  TcpServer.h
server/src/: Database.cpp  MessageRouter.cpp  ServerRoutes.cpp  TcpServer.cpp  main.cpp
shared/include/: DataStructures.h
shared/src/: DataStructures.cpp
src/: DataStructures.cpp  main.cpp
